[package]
name = "dsa"
version = "0.1.0"
edition = "2024"

[lib]
# name = "dsa/commons"
path = "languages/rust/lib.rs"

[[bin]]
name = "twosum"
path = "problems/twosum/rust/solution.rs"

[[bin]]
name = "threesum"
path = "problems/threesum/rust/solution.rs"

[dependencies]
[[bin]]
name = "dungeongame"
path = "problems/dungeongame/rust/solution.rs"
